Fixed masthead overflow problem.

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -83,15 +83,3 @@
   font-size: 24px;
   line-height: 55px;
 }
-
-.o-ft-header__ft-masthead {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  i {
-    @extend %o-ft-icons-icon--ft-logo;
-    @include oFtIconsBaseIconStyles();
-    margin-top: -9px;
-    font-size: 216px;
-  }
-}
